--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Qrcode</title>
+  <title>Test1</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,5 +10,5 @@
 <link rel="stylesheet" href="styles.3ff695c00d717f2d2a11.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.50aa5bb6102ae74ed53f.js"></script><script type="text/javascript" src="main.3821aac6f87e4e2f965b.js"></script></body>
+<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.50aa5bb6102ae74ed53f.js"></script><script type="text/javascript" src="main.f646b03aac69ce0e34a5.js"></script></body>
 </html>
