--- a/home.html
+++ b/home.html
@@ -1,6 +1,6 @@
-<script src="qr_packed.js">
+<script src="assets/qr_packed.js">
 </script>
-<script src="jquery-1.10.2.min.js">
+<script src="assets/jquery-1.10.2.min.js">
 </script>
 <div class="panel panel-default">
     <div class="panel-body">
