--- a/qrLogin.html
+++ b/qrLogin.html
@@ -88,7 +88,7 @@
         display: inline-block;
         height: 1em;
         width: 1.7em;
-        background-image: url('assets/qrcode.png');
+        background-image: url('assets/coupon.png');
         background-repeat: no-repeat;
         cursor: pointer;
         margin-left: -1.7em;
