--- a/qrLogin.html
+++ b/qrLogin.html
@@ -86,8 +86,8 @@
 
     .qrcode-text-btn {
         display: inline-block;
-        height: 1em;
-        width: 1.7em;
+        height: 100%;
+        width: 100%;
         background-image: url('assets/coupon.png');
         background-repeat: no-repeat;
         cursor: pointer;
