--- a/qrLogin.html
+++ b/qrLogin.html
@@ -86,8 +86,8 @@
 
     .qrcode-text-btn {
         display: inline-block;
-        height: 100%;
-        width: 100%;
+        height: 100px;
+        width: 100px;
         background-image: url('assets/coupon.png');
         background-repeat: no-repeat;
         cursor: pointer;
