--- a/qrLogin.html
+++ b/qrLogin.html
@@ -86,8 +86,8 @@
 
     .qrcode-text-btn {
         display: inline-block;
-        height: 100px;
-        width: 100px;
+        height: 300px;
+        width: 300px;
         background-image: url('assets/coupon.png');
         background-repeat: no-repeat;
         cursor: pointer;
@@ -114,6 +114,10 @@
             min-height: 100%;
             width: 100%;
         }
+		
+.input:focus {
+    outline:none;
+}
     </style>
 
 <script type="text/javascript">
