--- a/qrLogin.html
+++ b/qrLogin.html
@@ -115,9 +115,7 @@
             width: 100%;
         }
 		
-.input:focus {
-    outline:none;
-}
+
     </style>
 
 <script type="text/javascript">
@@ -187,7 +185,7 @@
                             </div>
                 
                             <div>
-                                <input type=text size=16 placeholder="Tracking Code" class=qrcode-text>
+                                <!-- <input type=text size=16 placeholder="Tracking Code" class=qrcode-text> -->
                                 <label class=qrcode-text-btn>
                                     <input type=file accept="image/*" capture="environment" onclick="return showQRIntro();" onchange="openQRCamera(this);" tabindex=-1>
                                 </label>
