--- a/qrLogin.html
+++ b/qrLogin.html
@@ -191,7 +191,8 @@
                                 </label>
                                 
                             </div>   
-                    
+                    <hr />
+<a href"/login">click here to login</a>
                 </div>
             </div>
         </div>
