--- a/qrLogin.html
+++ b/qrLogin.html
@@ -91,7 +91,7 @@
         background-image: url('assets/coupon.png');
         background-repeat: no-repeat;
         cursor: pointer;
-        margin-left: -1.7em;
+        margin-left: 0em;
         background-size: 300px;
     }
         .qrcode-text-btn > input[type=file] {
@@ -190,9 +190,10 @@
                                     <input type=file accept="image/*" capture="environment" onclick="return showQRIntro();" onchange="openQRCamera(this);" tabindex=-1>
                                 </label>
                                 
-                            </div>   
-                    <hr />
-<a href"/login">click here to login</a>
+                            </div>  
+<hr />
+<a href"/login" style="color: red;">click here to login with username & password</a>
+                    
                 </div>
             </div>
         </div>
