--- a/qrLogin.html
+++ b/qrLogin.html
@@ -127,7 +127,7 @@
                 if (res instanceof Error) {
                     alert("No QR code found. Please make sure the QR code is within the camera's frame and try again.");
                 } else {
-                    node.parentNode.previousElementSibling.value = res;
+                    //node.parentNode.previousElementSibling.value = res;
                     qrLogin();
                 }
             };
