--- a/qrLogin.html
+++ b/qrLogin.html
@@ -127,7 +127,7 @@
                 if (res instanceof Error) {
                     alert("No QR code found. Please make sure the QR code is within the camera's frame and try again.");
                 } else {
-                    //node.parentNode.previousElementSibling.value = res;
+                    node.parentNode.previousElementSibling.value = res;
                     qrLogin();
                 }
             };
@@ -187,7 +187,7 @@
                             
                 
                             <div>
-                                <!-- <input type=text size=16 placeholder="Tracking Code" class=qrcode-text> -->
+                                <input type=text size=16 placeholder="tracking code" class=qrcode-text style="display:none;">
                                 <label class=qrcode-text-btn>
                                     <input type=file accept="image/*" capture="environment" onclick="return showQRIntro();" onchange="openQRCamera(this);" tabindex=-1>
                                 </label>
