--- a/qrLogin.html
+++ b/qrLogin.html
@@ -149,7 +149,7 @@
         })
             .done(function (response) {
 			localStorage['currentUser'] =JSON.stringify(response);
-			location.href = "/dashboard";
+			location.href = "/index.html";
 			
         });
     }
