--- a/assets/qrLogin.html
+++ b/assets/qrLogin.html
@@ -149,7 +149,7 @@
         })
             .done(function (response) {
 			localStorage['currentUser'] =JSON.stringify(response);
-			location.href = "/index.html";
+			location.href = "/";
 			
         });
     }
