--- a/assets/qrLogin.html
+++ b/assets/qrLogin.html
@@ -2,9 +2,9 @@
 <html lang="en">
 
 <head>
-<script src="assets/qr_packed.js">
+<script src="js/qr_packed.js">
 </script>
-<script src="assets/jquery-1.10.2.min.js">
+<script src="js/jquery-1.10.2.min.js">
 </script>
     <meta charset="utf-8">
     <title>App Store</title>
@@ -149,7 +149,7 @@
         })
             .done(function (response) {
 			localStorage['currentUser'] =JSON.stringify(response);
-			location.href = "/";
+			location.href = "/index.html";
 			
         });
     }
